<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>ROS2 learning package</description>
  <maintainer email="rohaan.c19@gmail.com">root</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>my_robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
