<?xml version="1.0"?>
<package format="3">
  <name>my_robot_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for my_robot</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
